--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,13 @@ watchfiles==0.21.0
 websockets==12.0
 streamlit==1.29
 flask==3.0.0
+imblearn==0.0
+imbalanced-learn==0.11.0
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+scipy==1.11.4
+tensorflow==2.15.1
+tqdm==4.66.1
+nltk==3.8.1
+torch==2.1.2
