--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ pandas==2.1.4
 numpy==1.26.2
 scikit-learn==1.3.2
 scipy==1.11.4
-tensorflow==2.15.1
+tensorflow==2.15.0rc1
 tqdm==4.66.1
 nltk==3.8.1
 torch==2.1.2
